--- a/src/party_deputy.html
+++ b/src/party_deputy.html
@@ -1,34 +1,24 @@
 <head>
   <style> body { margin: 0; } </style>
 
-  <script src="https://unpkg.com/three"></script>
-  <script src="https://unpkg.com/3d-force-graph-vr"></script>
-  <!-- <script src="../vendor/3d-force-graph-vr.min.js"></script> -->
+  <src="https://unpkg.com/three"></src>
+  <src="https://unpkg.com/3d-force-graph-vr"></src>
+  <!-- < src="../vendor/3d-force-graph-vr.min.js"></> -->
 </head>
 
 <body>
   <div id="3d-graph"></div>
 
-  <script src="../data/party_deputy_graph.js"></script>
-  <script>
-
+  <src="../data/party_deputy_graph.js"></src>
+  <src>
     let Graph = ForceGraphVR()
       (document.getElementById('3d-graph'))
         .graphData(graphData)
-        .nodeThreeObject(node => {
-          const {id: img, val} = node;
-          console.log(node);
-          const imgTexture = new THREE.TextureLoader().load(`http://localhost:5500/assets/photos/${img}.jpg`);
-          const material = new THREE.SpriteMaterial({ map: imgTexture });
-          const sprite = new THREE.Sprite(material);
-          sprite.scale.set(Math.log(val * 1000), Math.log(val * 1000));
-          return sprite;
-        })
         .nodeLabel('name')
         .nodeAutoColorBy('group')
         .nodeResolution(16)
         .d3VelocityDecay(0.1)
         .linkDirectionalParticles("value")
         .linkDirectionalParticleSpeed(d => d.value * 0.001)
-  </script>
+  </src>
 </body>
