--- a/src/test_component.html
+++ b/src/test_component.html
@@ -1,31 +1,51 @@
 <head>
   <style> body { margin: 0; } </style>
 
-  <script src="https://unpkg.com/three"></script>
-  <script src="https://unpkg.com/3d-force-graph-vr"></script>
-  <script>
+  <src="https://unpkg.com/three"></src>
+  <src="https://unpkg.com/3d-force-graph-vr"></src>
+  <src>
     const render_img = ({id: img, val}) => {
           const imgTexture = new THREE.TextureLoader().load(`http://localhost:5500/assets/photos/${img}.jpg`);
           const material = new THREE.SpriteMaterial({ map: imgTexture });
           const sprite = new THREE.Sprite(material);
-          sprite.scale.set(Math.log(val * 1000), Math.log(val * 1000));
+          sprite.scale.set(25, 25);
           return sprite;
         };
 
     const hover_node = node => console.log(node);
-  </script>
-</head>
+  </src>
+</head> 
 
 <body>
     <a-scene stats>
         <a-entity vive-controls="hand: left"></a-entity>
         <a-entity vive-controls="hand: right"></a-entity>
-        <a-camera wasd-controls="fly: true; acceleration: 3000">
-            <a-cursor color="lavender" opacity="0.5"></a-cursor>
-        </a-camera>
+        <!--<a-entity id="rig" position="" rotation="" movement-controls="fly: true; acceleration: 3000" gamepad-controls="fly: true; acceleration: 3000" trackpad-controls="fly: true; acceleration: 3000" keyboard-controls="fly: true; acceleration: 3000" touch-controls="fly: true; acceleration: 3000">
+            <a-entity camera="" position="" rotation="" look-controls="">
+            </a-entity>
+        </a-entity>-->
+        <a-entity id="rig"
+          movement-controls="fly: true"
+          universal-controls="movementAcceleration: 5000">
+            <a-camera wasd-controls="fly: true; acceleration: 5000" look-controls>
+            </a-camera>
+        </a-entity>
+        <!--<a-entity id="rig"
+            movement-controls="fly: true; acceleration: 5000; easing: 0"
+            wasd-controls="acceleration: 4000"
+            gamepad-controls
+            trackpad-controls
+            keyboard-controls
+            touch-controls
+            position="25 0 25">
+            <a-entity camera
+                        position="0 1.6 0"
+                        look-controls="acceleration: 5000; easing: 0"></a-entity>
+        </a-entity>-->
+        
         <a-sky color="#002"></a-sky>
 
-        <a-entity forcegraph="json-url: /data/party_deputy_graph.json; on-node-center-hover: hover_node; node-three-object: render_img; node-label: description; node-desc: user; node-auto-color-by: user"></a-entity>
+        <a-entity forcegraph="json-url: /data/party_deputy_graph.json; on-node-center-hover: hover_node; node-three-object: render_img; node-label: deion; node-desc: user; node-auto-color-by: user"></a-entity>
     </a-scene>
   
 </body>
