--- a/src/party_deputy.html
+++ b/src/party_deputy.html
@@ -1,16 +1,16 @@
 <head>
   <style> body { margin: 0; } </style>
 
-  <src="https://unpkg.com/three"></src>
-  <src="https://unpkg.com/3d-force-graph-vr"></src>
-  <!-- < src="../vendor/3d-force-graph-vr.min.js"></> -->
+  <script src="https://unpkg.com/three"></script>
+  <script src="https://unpkg.com/3d-force-graph-vr"></script>
+  <!-- <script src="../vendor/3d-force-graph-vr.min.js"></script> -->
 </head>
 
 <body>
   <div id="3d-graph"></div>
 
-  <src="../data/party_deputy_graph.js"></src>
-  <src>
+  <script src="../data/party_deputy_graph.js"></script>
+  <script>
     let Graph = ForceGraphVR()
       (document.getElementById('3d-graph'))
         .graphData(graphData)
@@ -20,5 +20,5 @@
         .d3VelocityDecay(0.1)
         .linkDirectionalParticles("value")
         .linkDirectionalParticleSpeed(d => d.value * 0.001)
-  </src>
+  </script>
 </body>
